# vk_draft

./: CMakeLists.txt  todo.txt
src/: main.cpp
src/App/: App.cpp  App.hpp  CMakeLists.txt
src/App/Config/include/: Config.hpp
src/App/Window/: CMakeLists.txt  Window.cpp  Window.hpp
src/App/Window/include/: Window.hpp
src/App/Window/src/: Window.cpp
src/App/include/App/: App.hpp
src/App/src/: App.cpp
src/Config/: CMakeLists.txt
src/Config/include/Config/: Config.hpp
src/VkCore/: CMakeLists.txt
src/VkCore/Context/include/: Context.hpp
src/VkCore/include/VkCore/: Context.hpp  Instance.hpp  Queue.hpp  Swapchain.hpp
src/VkCore/src/: Context.cpp  Instance.cpp  Queue.cpp
src/Window/: CMakeLists.txt
src/Window/include/Window/: Window.hpp
src/Window/src/: Window.cpp
